<resources>
    <string name="app_name">XeuX Présence</string>

    <string name="title_activity_scanned_barcode">ScannedBarcodeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="matricule">Matricule</string>
    <string name="lier_la_carte">Lier la carte</string>
    <string name="titleNumero">Numéro</string>
    <string name="titleNom">Nom</string>
    <string name="titleFiliere">Filière</string>
    <string name="titleNaissance">Filière</string>
    <string name="student_photo">Student Photo</string>
    <string name="date_de_naissance">Date de naissance :</string>
    <string name="nom_et_pr_noms">Nom et Prénoms</string>
    <string name="title_activity_student_info">Student_info</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="fili_re">Filière</string>
    <string name="niveau">Niveau</string>
    <string name="valid_msg">Carte validée \n Bonne journée \n à vous !!!</string>
    <string name="student_img">Img student</string>
    <string name="prefs_local_address">Adresse locale</string>
    <string name="prefs_nom_device">Nom de l\'équipement</string>
    <string name="prefs_internet_address">Adresse Internet</string>
    <string name="temps">Duree MAJ</string>
    <string name="pref_seek_val">pref_time_val</string>
    <string name="seconds">Temps d\'envoie de des fichiers</string>
    <string name="nombre_save">Nombre de fichiers</string>
    <string name="nombre_save_val">nombre_fichiers</string>
    <string-array name="pref_seek_values">
        <item>30s</item>
        <item>5min</item>
        <item>10min</item>
        <item>20min</item>
        <item>30min</item>
        <item>1H</item>
        <item>2H</item>
        <item>5H</item>
    </string-array>

    <string-array name="pref_duration">
        <item>30000</item>
        <item>300000</item>
        <item>600000</item>
        <item>1200000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
        <item>18000000</item>
    </string-array>

    <string-array name="pref_nombre">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>


    <string-array name="pref_nombre_save_values">
        <item>1 fichier</item>
        <item>2 fichiers</item>
        <item>3 fichiers</item>
        <item>4 fichiers</item>
        <item>5 fichiers</item>
        <item>6 fichiers</item>
        <item>7 fichiers</item>
        <item>8 fichiers</item>
    </string-array>

</resources>
